--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Willow Glen Hair Salon - Professional hair services, styling, and treatments" />
     <meta name="author" content="Lovable" />
 
+    <link rel="icon" type="image/png" href="/Logo/icononly_transparent_nobuffer.png" />
+
     <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="Willow Glen Hair Salon" />
     <meta property="og:description" content="Willow Glen Hair Salon - Professional hair services" />
