--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <meta property="og:title" content="Willow Glen Hair Salon" />
     <meta property="og:description" content="Willow Glen Hair Salon - Professional hair services" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/Logo/fulllogo_transparent.png" />
+    <meta property="og:url" content="https://www.willowglencuts.com/" />
+    <meta property="og:image" content="https://www.willowglencuts.com/Logo/fulllogo_transparent.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="/public/Logo/fulllogo_transparent.png" />
+    <meta name="twitter:image" content="https://www.willowglencuts.com/Logo/fulllogo_transparent.png" />
   </head>
 
   <body>
